KFSPTS-8416: cleanup test sections of pom (#368)