@@ -66,9 +66,7 @@
                     **/ezraUpdateAwardImplTest.java,
                     **/ezraUpdateProposalImplTest.java,
                     **/ezraUpdateSponsorImplTest.java,
-                    **/CuCommodityCodeUpdateServiceImplTest.java,
-                    **/CuPurapAccountingServiceImplTest.java,
-                    **/CuVendorLookupableHelperServiceImplTest.java
+                    **/CuCommodityCodeUpdateServiceImplTest.java
                 </test.excludes>
             </properties>
         </profile>
@@ -81,7 +79,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <argLine>-Xmx2G -Xms2G -XX:MaxPermSize=512m</argLine>
+                    <argLine>-Xmx2G -Xms2G</argLine>
                     <skipTests>${skipTests}</skipTests>
                     <excludes>
                         <exclude>${test.excludes}</exclude>
